# Portfolio_Website

./: .gitignore  main.py  pyproject.toml  run.sh
client/src/: App.jsx
client/src/pages/: AboutMe.jsx  Chatbot.jsx  Contact.jsx  ContactForm.jsx
client/src/styles/: main.css
server/: config.py
server/aboutme/: routes.py  services.py
server/contact/: models.py  routes.py  service.py
server/utils/: info.json  llm.py  loader.py  tool.py  vectordb.py
