[project]
name = "personal-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "pydantic[email]>=2.11.7",
    "python-dotenv",
    "langchain-core",                
    "langchain-groq",             
    "langgraph",                   
    "langchain-community"  
    "langgraph"             
]
